# galament

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake/: client.cmake  server.cmake
src/: galament.sln
src/client/: client.vcxproj  client.vcxproj.filters  command_line.h  main.cpp
src/client/helper/: random_generator.cpp  random_generator.h  statistic_printer.cpp  statistic_printer.h
src/client/websocket/: client.cpp  client.h
src/client/work_mode/: abstract.cpp  abstract.h  factory.cpp  factory.h  get_statistic.cpp  get_statistic.h  send_data_packet.cpp  send_data_packet.h
src/common/data_types/: data_packet.cpp  data_packet.h  statistic.h  timestamp.cpp  timestamp.h  uuid.cpp  uuid.h  uuid_statistic.cpp  uuid_statistic.h
src/common/message/: message_serializer.h  message_type.h  message_visitor.h
src/common/protobuf/: compile.txt  message_serializer.cpp  message_serializer.h  messages.pb.cc  messages.pb.h  messages.proto
src/common/websocket/: connection.h
src/server/: main.cpp  server.vcxproj  server.vcxproj.filters
src/server/command/: command_executor.cpp  command_executor.h  command_producer.cpp  command_producer.h  command_queue.cpp  command_queue.h
src/server/command/command/: abstract.cpp  abstract.h  command_type.h  get_statistic.cpp  get_statistic.h  save_data_packet.cpp  save_data_packet.h
src/server/database/: database.cpp  database.h
src/server/handler/: client_message_handler.cpp  client_message_handler.h
src/server/websocket/: client.cpp  client.h  server.cpp  server.h
(+5 files in other folders)
